# decision-ecosystem-integration-harness

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FORMULAS.md  INTEGRATION_GUIDE.md  P0_CLOSURE_CHECKLIST.md  P0_VERIFICATION_REPORT.md  P2_DONE_EVIDENCE.md  RELEASE_RECIPE.md
docs/examples/: README.md  minimal_single_step.py
harness/: __init__.py  __main__.py  packet_builder.py  redaction.py  run_one_step.py
harness/platform/: __init__.py  catalog.py  control.py  gateway.py  store.py
harness/platform/adapters/: __init__.py  base.py  example_domain_agent_tool_use.py  example_domain_content_moderation.py  example_domain_lending.py  example_domain_ops_automation.py  example_domain_scheduling.py  example_domain_trading.py  example_domain_triage.py
scripts/: full_stack_e2e.sh
tests/: test_end_to_end_smoke.py  test_fullstack_e2e_report.py  test_inv_adapter_domain_leak_1.py  test_inv_adapter_reg_det.py  test_inv_gw_ctrl_auth.py  test_inv_gw_fail_closed.py  test_inv_gw_size_rl.py  test_inv_readme_no_placeholder_1.py  test_inv_store_sec_1.py  test_invariant_0_domain_agnosticism.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_h1_schema_minor_2.py  test_invariant_h2_kill_switch_dominance.py  test_invariant_h3_packet_trace_completeness.py  test_invariant_h4_fail_closed_propagation.py  test_invariant_r0_release_recipe_present.py  test_invariant_redaction_nested.py  test_invariant_schema_pin_minor_2.py  test_invariant_t1_harness_external_keys_registered.py  test_invariant_version_single_source.py  test_platform_catalog_store_control.py
tools/: rewrite_ci_yml.py
