[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-ecosystem-integration-harness"
version = "0.1.0"
description = "E2E integration harness for the multi-core decision ecosystem (contract-first; schema 0.2.x)"
requires-python = ">=3.11"
dependencies = [
    "decision-schema>=0.2,<0.3",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "build"]
full = [
    "mdm-engine>=0.2,<0.3",
    "ops-health-core>=0.1,<0.2",
    "dmc-core>=0.1,<0.2",
    "evaluation-calibration-core>=0.1,<0.2",
]
gateway = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[tool.pytest.ini_options]
markers = [
    "fullstack: requires optional cores (mdm-engine, dmc-core, ops-health-core, evaluation-calibration-core)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]

[tool.ruff]
line-length = 100
target-version = "py311"
